# AIstudioProxyAPI

./: .env.example  .gitignore  README.md  launch_camoufox.py  pyproject.toml  requirements.txt  server.py  update_browserforge_data.py
api_utils/: app.py  queue_worker.py  request_processor.py  request_processor_backup.py  routes.py  utils.py
browser_utils/: __init__.py  initialization.py  model_configs_example.json  model_management.py  more_modles.js  operations.py  page_controller.py  script_manager.py
config/: __init__.py  constants.py  selectors.py  settings.py
deprecated_javascript_version/: server.cjs
docker/: .env.docker  Dockerfile  README-Docker.md  README.md  SCRIPT_INJECTION_DOCKER.md  docker-compose.yml  model_configs_docker_example.json
docs/: advanced-configuration.md  api-usage.md  architecture-guide.md  authentication-setup.md  daily-usage.md  dependency-versions.md  development-guide.md  environment-configuration.md  installation-guide.md  script_injection_guide.md  script_injection_v2_upgrade.md  streaming-modes.md  troubleshooting.md  ui_state_management.md  webui-guide.md
models/: chat.py
scripts/: install.ps1  install.sh
